@startuml
'https://plantuml.com/class-diagram'
skinparam classAttributeIconSize 0


class App
class CRMModel
class CRMDAO {
+load()
+save()
}
class MainController
class CRMController
class TerminalView

App <-- MainController
MainController "1" *-- "1" CRMController
MainController "1" *-- "1" TerminalView
CRMController <-- TerminalView
CRMController <-- CRMDAO
CRMDAO "1" *-- "0.." CRMModel
@enduml